[gd_scene load_steps=2 format=3 uid="uid://shop_menu_scene_01"]

[ext_resource type="Script" path="res://ui/shop_menu.gd" id="1_script"]

[node name="ShopMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
visible = false
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 60.0
offset_top = 60.0
offset_right = 980.0
offset_bottom = 620.0

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Shop - Choose one (free)"

[node name="Item1" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Item 1"

[node name="Item2" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Item 2"

[node name="Item3" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Item 3"

[node name="Item4" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Item 4"

[node name="CloseButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Close"
